# shared-foundation-lua-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Package.swift  README.md
.github/workflows/: cmake-multi-platform.yml
include/: FoundationLuaCxx.hpp
src/: debug-information.cpp  debug-information.hpp  fart-lua.hpp  foundation-lua.hpp  global.cpp  global.hpp  hook.cpp  hook.hpp  lua-exception.cpp  lua-exception.hpp  lua.cpp  lua.hpp  stack-trace-entry.cpp  stack-trace-entry.hpp  state.cpp  state.hpp
src/exceptions/: compiler-exception.cpp  compiler-exception.hpp  exceptions.hpp  exhausted-stack-exception.cpp  exhausted-stack-exception.hpp  not-supported-exception.cpp  not-supported-exception.hpp  runtime-exception.cpp  runtime-exception.hpp  unexpected-type-exception.cpp  unexpected-type-exception.hpp
src/types/: boolean.cpp  boolean.hpp  caller.cpp  caller.hpp  function.cpp  function.hpp  light-user-data.cpp  light-user-data.hpp  number.cpp  number.hpp  string.cpp  string.hpp  table.cpp  table.hpp  type.cpp  type.hpp  types.hpp  user-function.cpp  user-function.hpp  value.cpp  value.hpp
